[modify] doc 修正
